# django-imagefield

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.rst  biome.json  eslint.config.mjs  package.json  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
docs/: conf.py  index.rst  requirements.txt
imagefield/: __init__.py  fallback.py  fields.py  processing.py  webp.py  websafe.py  widgets.py
imagefield/locale/de/LC_MESSAGES/: django.mo  django.po
imagefield/management/commands/: process_all_imagefields.py  process_imagefields.py
imagefield/static/imagefield/: box-drawing.css  plugin_ckeditor.js  ppoi.css  ppoi.js
tests/testapp/: admin.py  models.py  settings.py  test_fallback.py  test_force_png.py  test_imagefield.py  urls.py  utils.py  views.py
tests/testapp/media/: python-logo.tiff
